# 2dgame

./: CMakeLists.txt  game_scene.cpp  game_scene.h  game_window.cpp  game_window.h  ghostgame.kdev4  level.cpp  level.h  main.cpp  sprites.cpp  sprites.h
Assets/Tiles/: dialogue_frame.aseprite
event_management/: npc_events.cpp  npc_events.h
level_management/: level.h
mechanics_management/: arithmetic.h  items.h  mechanics.cpp  mechanics.h
rendering_management/: renderer.cpp  renderer.h
sprite_management/: sprite_animation_manager.cpp  sprite_animation_manager.h  sprites.cpp  sprites.h
window_management/: game_window.cpp  game_window.h
